--- a/src/app/routes/blog/posts/post/post.component.html
+++ b/src/app/routes/blog/posts/post/post.component.html
@@ -1,3 +1,10 @@
-<p>
-  post works!
-</p>
+<div class="container">
+  <div>
+    <h2>{{post.title}}</h2>
+    <p>{{post.content}}</p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <span>Create Date: {{post.createAt | date: 'yyyy-MM-dd HH:mm:ss'}}</span>
+    <span>Last Modified Date: {{post.lastModifiedAt | date}}</span>
+  </div>
+</div>
