--- a/src/app/routes/blog/posts/post-list/post-preview/post-preview.component.html
+++ b/src/app/routes/blog/posts/post-list/post-preview/post-preview.component.html
@@ -7,7 +7,7 @@
   <div role="content">
     {{content}}
     <div class="float-right">
-      <a href="" [routerLink]="['/routePath']" routerLinkActive="router-link-active">read more..</a>
+      <a href="" [routerLink]="['../post/1']" routerLinkActive="router-link-active">read more..</a>
     </div>
   </div>
   
