--- a/src/app/routes/blog/posts/post/post.component.html
+++ b/src/app/routes/blog/posts/post/post.component.html
@@ -9,4 +9,13 @@
       <span>Last Modified Date: {{post.lastModifiedAt | date}}</span>
     </div>
   </ng-container>
+  <div>
+    <h2>{{(fetchPost$ | async)?.title}}</h2>
+    <p>{{(fetchPost$ | async)?.content}}</p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <span>Create Date: {{(fetchPost$ | async)?.createAt | date: 'yyyy-MM-dd HH:mm:ss'}}</span>
+    <span>Last Modified Date: {{(fetchPost$ | async)?.lastModifiedAt | date}}</span>
+  </div>
+  <a [routerLink]="['../../posts']">back</a>
 </div>
