feat: ngrx vs. di

--- a/src/app/routes/blog/posts/post-list/post-preview/post-preview.component.html
+++ b/src/app/routes/blog/posts/post-list/post-preview/post-preview.component.html
@@ -7,8 +7,9 @@
   <div role="content">
     {{content}}
     <div class="float-right">
-      <a href="" [routerLink]="['../post/1']" routerLinkActive="router-link-active">read more..</a>
+      <a href="" [routerLink]="['post/1']" routerLinkActive="router-link-active">read more..</a>
     </div>
   </div>
+  {{count$ | async}}
   
 </div>
