--- a/src/app/view/blog/shared/blog-layout/blog-header/blog-header.component.html
+++ b/src/app/view/blog/shared/blog-layout/blog-header/blog-header.component.html
@@ -10,7 +10,13 @@
         <a class="nav-link" routerLink="posts" routerLinkActive="active">Blog <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="dimain" routerLinkActive="active">DI Test</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="about" routerLinkActive="active">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='../main'>Admin</a>
       </li>
     </ul>
   </div>
